# django-push-redirect

./: .gitignore  DEVELOPMENT.md  Dockerfile  HISTORY.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  manage.py  requirements-dev.txt  setup.cfg
conf/nginx/: default.conf
push_redirect/: http.py  middleware.py  settings.py  urls.py
test_project/: settings.py  urls.py  wsgi.py
tests/: settings.py  test_middleware.py  urls.py
