[metadata]
name = django-push-redirect
version = attr: push_redirect.__version__
url = https://github.com/leukeleu/django-push-redirect
author = Jaap Roes (Leukeleu)
author_email = jroes@leukeleu.nl
description = A Django middleware that adds a HTTP/2 Server Push header to plain Django redirect responses
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3 :: 3.6
    Programming Language :: Python :: 3 :: 3.7
    Programming Language :: Python :: 3 :: 3.8
project_urls =
    Documentation = https://github.com/leukeleu/django-push-redirect
    Source = https://github.com/leukeleu/django-push-redirect
    Tracker = https://github.com/leukeleu/django-push-redirect/issues

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    Django

[wheel]
universal = 1

[isort]
line_length = 88
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
lines_between_types = 1

[flake8]
max-line-length = 88
ignore = E203, W503
exclude =
    .git,
    __pycache__
